fixed some routing and added cshtml

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,1 +1,3 @@
-﻿
+<h1>Welcome to Pierre's bakery</h1>
+<h3><a href='/vendors'>View Vendors</a></h3>
+<h3><a href='/vendors/new'>Add a new Vendor</a></h3>
