--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,16 +1,3 @@
-@using PierreVendor.Models;
-
-<h3> Vendor List </h3>
-
-if (@Model.Count == 0)
-{
-    <h3>No vendors yet. <a href = "/vendor/new">Add a new vendor</a></h3>
-}
-<ul>
-    @foreach (Vendor vendor in Model)
-    {
-        <li>
-            <h3><a href='/vendors/@vendor.Id'>@vendor.Name</a></h3>
-        </li>
-    }
-</ul>
+<h1> List of Pierre's vendors and orders</h1>
+<h3><a href='/vendors'>View vendors</a></h3>
+<h3><a href='/vendors/new'>Add a new vendor</a></h3>
